--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://aabbell.github.io/cv-application",
+  "homepage": "https://aabbell.github.io/cv-application/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
